--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "prisma.config.js",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "build": "npx prisma generate && npm install"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "eslint": "^9.39.1",
-    "globals": "^16.5.0"
+    "globals": "^16.5.0",
+    "prisma": "^7.1.0"
   }
 }
