--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
-    "build": "npx prisma generate && npm install"
+    "build": "npx prisma generate && npm install",
+    "seed": "node prisma/seed.js"
   },
   "keywords": [],
   "author": "",
